--- a/PR153-DataBindingRecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -24,7 +24,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/two_line_avatar_marginLeft"
             android:layout_marginTop="@dimen/two_line_avatar_marginTop"
-            android:contentDescription="@string/avatar"
+            android:contentDescription="@string/activity_main_item_imgPhoto"
             app:imageUrl="@{item.photoUrl}"
             android:src="@drawable/ic_user"/>
 
@@ -33,11 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_marginEnd="@dimen/two_line_text_marginRight"
-            android:layout_marginRight="@dimen/two_line_text_marginRight"
             android:paddingLeft="@dimen/two_line_text_paddingLeft"
             android:paddingStart="@dimen/two_line_text_paddingLeft"
             android:paddingRight="@dimen/two_line_text_paddingLeft"
@@ -51,12 +48,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/lblNombre"
             android:layout_marginEnd="@dimen/two_line_text_marginRight"
-            android:layout_marginRight="@dimen/two_line_text_marginRight"
             android:paddingBottom="@dimen/two_line_secundary_text_paddingBottom"
             android:paddingLeft="@dimen/two_line_text_paddingLeft"
             android:paddingStart="@dimen/two_line_text_paddingLeft"
