--- a/PR153-DataBindingRecyclerView/app/src/main/res/values/dimens.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/res/values/dimens.xml
@@ -1,19 +1,9 @@
 <resources>
 
-    <!-- Empty View -->
-    <dimen name="empty_drawablePadding">10dp</dimen>
+    <dimen name="activity_main_lblEmptyView_drawablePadding">10dp</dimen>
+    <dimen name="activity_main_fab_margin">16dp</dimen>
+    <dimen name="activity_main_lstStudents_padding">8dp</dimen>
 
-    <!-- Fake StatusBar -->
-    <dimen name="statusBarHeight">0dp</dimen>
-
-    <!-- FAB -->
-    <dimen name="fab_margin">0dp</dimen>
-    <dimen name="fab_elevation">4dp</dimen>
-
-    <!-- RecyclerView -->
-    <dimen name="lst_padding">8dp</dimen>
-
-    <!-- Single line with avatar list item -->
     <dimen name="two_line_tile_height">72dp</dimen>
     <dimen name="two_line_avatar_width">40dp</dimen>
     <dimen name="two_line_avatar_height">40dp</dimen>
