--- a/PR244-DataBindingLiveData/app/src/main/res/values/colors.xml
+++ b/PR244-DataBindingLiveData/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="primary">#673AB7</color>
+    <color name="primary_dark">#512DA8</color>
+    <color name="accent">#8BC34A</color>
+    <color name="grey">#808080</color>
 </resources>
