--- a/PR244-DataBindingLiveData/app/src/main/res/layout/activity_main.xml
+++ b/PR244-DataBindingLiveData/app/src/main/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<!--suppress AndroidUnknownAttribute -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
