--- a/PR153-DataBindingRecyclerView/app/src/main/res/values/colors.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="primary">#673AB7</color>
     <color name="primary_dark">#512DA8</color>
     <color name="accent">#8BC34A</color>
-    <color name="accent_translucent">#808BC34A</color>
+    <color name="white">#FFFFFF</color>
 </resources>
