--- a/PR246-Navigation/app/src/main/res/layout/main_fragment.xml
+++ b/PR246-Navigation/app/src/main/res/layout/main_fragment.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.main.MainFragment">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/lblMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
