--- a/PR246-Navigation/app/src/main/res/menu/main_fragment.xml
+++ b/PR246-Navigation/app/src/main/res/menu/main_fragment.xml
@@ -5,9 +5,9 @@
     <!-- El id del ítem de menú debe corresponder con el id del destinatario en
      la navegación -->
     <item
-        android:id="@id/secondaryFragment"
+        android:id="@id/detailFragment"
         android:icon="@drawable/ic_arrow_forward_white_24dp"
-        android:title="@string/main_navigate"
+        android:title="@string/main_detail"
         app:showAsAction="ifRoom" />
 
     <item
