--- a/PR246-Navigation/app/src/main/res/menu/main_activity_bottom_nav.xml
+++ b/PR246-Navigation/app/src/main/res/menu/main_activity_bottom_nav.xml
@@ -12,4 +12,9 @@
         android:title="Secondary"
         android:icon="@drawable/ic_arrow_forward_white_24dp"/>
 
+    <item
+        android:id="@id/detailFragment"
+        android:title="Detail"
+        android:icon="@drawable/ic_arrow_forward_white_24dp"/>
+
 </menu>
